# terminalchat

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_storage.py
memory/: README.md  penguins.md
prompts/: system.md
src/: README.md  config.py  context_manager.py  manage_settings.py  model_handler.py  setup_sequence.py  storage.py  system_prompt.py  ui.py
src/app/: README.md  __init__.py  chat_loop.py  initializers.py  session.py
src/config/: README.md  __init__.py  defaults.py  manager.py  state.py  validators.py
src/models/: README.md  __init__.py  context.py  handler.py  prompt_formatter.py  streamer.py  system.py
src/rag/: README.md  __init__.py  embeddings.py  embeddings_cache.py  manager.py
src/settings/: README.md  __init__.py  input_helpers.py  manage_settings.py  model_parameters_menu.py  rag_settings_menu.py
src/storage/: README.md  __init__.py  file_io.py  manager.py
src/ui/: README.md  __init__.py  display.py  input.py  interface.py  menus.py
src/utils/: README.md  __init__.py  atomic_writes.py  exceptions.py  logging.py
tests/: README.md  conftest.py
tests/unit/: test_atomic_writes.py  test_config.py  test_context_manager.py  test_embeddings.py  test_embeddings_cache.py  test_file_io.py  test_input_helpers.py  test_logging.py  test_manage_settings.py  test_model_handler.py  test_prompt_formatter.py  test_rag_manager.py  test_session.py  test_storage.py  test_streamer.py  test_system_prompt.py
