[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalchat"
version = "0.1.0"
description = "A terminal-based chat interface for local language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers",
    "torch",
    "rich",
    "prompt-toolkit",
    "accelerate",
    "questionary",
]

[project.scripts]
terminalchat = "main:main"

[tool.setuptools]
py-modules = ["main"]

